<resources>
    <string name="app_name">Thanksgiving</string>
    <string name="on">فعال</string>
    <string name="off">غیرفعال</string>
    <string name="ok">فهمیدم</string>
    <string name="description_switch">فعال بودن یا نبودن پیام</string>
    <string-array name="energy">
        <item> اگر هر روز ۱ درصد در کار خود رشد کنید و هر روز با جدیت آن را ادامه دهید تا پایان سال ۳۶۵ درصد رشد کرده اید. بله رفيق… موفقیتهای بزرگ از قدم های کوچک آغاز میشه. </item>
        <item> خوب به هدفت فکرکن و باور داشته باش و بعد رویاپردازی کن و در نهایت جرات کن و انجامش بده میتوانی نتیجه دلخواهت را ببینی؟ </item>
        <item> ....از جایی که هستی شروع کن از چیزایی که داری استفاده کن کاری رو که می تونی انجام بده اما هرگز توقف نکن. </item>
        <item> خودت را در حد رویاهایت بدان و خودت را دست کم نگیر و بعد نقطه ی باورت را قوی کن اگر قلبا چیزی را بخواهی راه رسیدن به آن هم در مسیرت قرار میگیرد. </item>
        <item> هرچه احساس بهتری داشته باشید چیزهای خوب را بیشتر جذب میکنید امروز به یک چیز زیبا فکر کنید به یک موسیقی زیبا گوش کنید یا قدم بزنید تا احساس خوبی پیدا کنید. </item>
        <item> وقتی نسبت به چیزی عاشق هستید زندگی میتواند کاملاً رؤیایی باشد و این طور خواهد بود؛ اگر شما از این راز استفاده کنید. امروز را عاشقانه تر زندگی کن رفیق. </item>
        <item> اول تصورش کن بعد براش سخت تلاش کن اگر تو وسعت فکرت اومده پس شدنیه. </item>
        <item> کافیه به خودت ایمان داشته باشی و با صدای بلند بگی باید بشه، من انجام میدم، من به دستش میارم من موفق میشم تو این دنیا نشد نداریم. </item>
        <item> موفقیت تصادفی نیست، موفقیت یعنی کارسخت، استقامت، یادگیری، مطالعه فداکاری و بیشتر از همه عشق به آن چیزی که انجام می دهید. </item>
        <item>     هیچوقت نمیتونید زمان رو بخرید نمیتونید زمان رو نگه دارید یا زمان بیشتری دریافت کنید فقط میتونید از زمان استفاده کنید و هدرش ندید امروز از وقتت به بهترین شکل استفاده کن. </item>
        <item> آخر همه ی نا امیدی ها نداشتن ها نخواستن ها نبودنها و به بن بست رسیدن ها خدایی را دارم که آغوشش را برایم باز کرده پس چرا نا امید باشم؟ </item>
        <item> امروز به خودت بگو فقط یه نفر توی دنیا برای من تصمیم میگیره و اون یه نفر منم. </item>
        <item> امروز با خودت یه قرارداد بنویس به خودت قول بده یک بار برای همیشه بهترین خودت رو به نمایش بزاری و طوفانی از تلاشهای خودت به پا کنی بعد زیرش رو امضا کن و آماده نبرد با زندگی شو. </item>
        <item> هیچوقت ناامید نشو رفیق \n خدا همیشه بعد از تاریکی نور جدیدی به زندگیت میاره. ایمان داشته باش و محکم قدم بردار \n </item>
        <item> ابتدا عاشق خودت باش و بعد میبینی همه چیز روی روال میفتد برای اینکه میر بتوانی هر چیزی را در این دنیا به دست بیاوری اول باید عاشق خودت باشی. </item>
        <item> تو نمیتونی چیزی رو که قبلا اتفاق افتاده تغییر بدی، پس وقت خودتو صرف فکر کردن در موردش نکن، ادامه بده، برو و ازش رد شو آینده خیلی وقته منتظرته.... . </item>
        <item> از کوچک ترین چیزهای زندگی ات لذت ببر؛ زیرا روزی می رسد که به پشت سرت نگاه و می همین خبرهای می کنی و متوجه می شوی همین چیزهای کوچک چقدر بزرگ بوده اند. </item>
        <item> اگر به همان اندازه که به ترسهایت فکر میکنی به رویاهایت هم بها بدهی و برای آن وقت و انرژی بگذاری معجزه های زندگی آرام, آرام شروع میشوند. از امروز معجزه کن. </item>
        <item> زندگی تنها زمانی تغییر خواهد کرد که بیشتر نسبت به رویاهای خود پایبند باشید از همین الان رویاهایت را جدی تر بگیر و برایشان قدم بردار. </item>
        <item> آرامش کلیدی دارد که جایش در پس افکار توست هر روز که خورشید طلوع میکند تو با اندیشین و با هم با اندیشیدن به رویاهایت ، طلوع کن و با کلید آرامش به موفقیت هایت فکرکن صبح بخير.... . </item>
        <item> یک روز دیگر دوباره شروع شده، ذهنت را از نگرانی فردا و پس فردا خالی کن وسعی کن امروزت را بسازی که فرداها نتیجه امروزهای پرتلاش ماست. </item>
        <item> ذهن تو بسیار قدرتمند است. و زمانی که ذهنت را با افکار مثبت را - پر میکنی زندگیت شروع میکند به تغییر کردن امروزت را با ذهنیت مثبت بساز. </item>
        <item> این رو یادت نره رسالت تو پیمودن یک مسیر درخشان است پس چه باک از سوار در خشاب در جه ب تاریکنای شب در پیرامونت ....؟ </item>
        <item> کافیه به خودت ایمان داشته باشی و با صدای بلند بگی باید بشه، من انجامش میدم ، من به دستش میارم من موفق میشم تو این دنیا نشد نداریم. </item>
        <item> تو قویتر از اونی هستی که فکرشو میکنی برای خودت انگیزه بساز و پر قدرت پیش برو. </item>
        <item> دنیا سرشار از انتخاب های خوب است و چقدر شایسته است که هر روز بهترینها را انتخاب کنی از خودت بپرس امروز چه کاری انجام دهم تا کیفیت زندگیم بهتر شود؟ شایست از بپرس امروز چه. </item>
        <item> امروز با خودت یه قرارداد بنویس . به خودت همیشه بهترین خودت نمایش بزاری و خودت به پاکنی بعد زیرش رو امضا کن و وفانی از تلاشهای آماده نبرد با زندگی شو. </item>
        <item> امروز فقط یک درصد کمتر به افکار منفی فکرکن یک درصد بیشتر بخند یک درصد بیشتر شاد باش یک درصد يخفى رصد بيشتر آرام تر باش و یک درصد بیشتر به رویات فکر کن تبریک میگم تو برنده شدی. </item>
        <item> هیچوقت نمیتونید زمان رو بخرید نمیتونید زمان رو نگه دارید یا زمان بیشتری دریافت کنید فقط میتونید از زمان استفاده کنید و هدرش ندید امروز از وقتت به بهترین شکل استفاده کن. </item>
        <item> از امروز نگران هیچ چیز نباش نگران فاصله رویاهایت و حقیقت - اکنونت نباش اگر میتوانی چیزی را تصور کنی آن را به دست خواهی آورد. صبح بخير.... . </item>
        <item> به خاطر هر چیزی که دوست داری پاشو بدو زمین بخور بلند شو بخند گریه خدمته شوی کن اشیای گریه کن خسته شو، استراحت کن اشک بریز ناراحت شو؛ حتی شده جنگ راه بنداز ولی براش اونقدر بجنگ تا بهش برسی. </item>
        <item> موفقیت تصادفی نیست، موفقیت یعنی کارسخت، استقامت، یادگیری، مطالعه . فداکاری و بیشتر از همه عشق به آن چیزی که انجام می دهید. </item>
        <item> رفیق میدونی که تا اولین قدم رو برنداری هیچ آرزویی برآورده نمیشه اگر می خواهی رشد کنی باید از همین امروز شروع کنی .... . </item>
        <item> از کوچک ترین چیزهای زندگی ات لذت ببر؛ زیرا روزی میرسد میکنی به پشت سرت های میشوی همین ،کوچک چقدر بزرگ بوده اند. </item>
        <item> امروز به خودت بگو فقط یه نفر توی دنیا واسه ا واسه من تصمیم میگیره و اون یه نفر منم.... . </item>
    </string-array>
    <string-array name="thanksgiving">
        <item> الهی.... \n شکرگزار این زندگی هستم که به من بخشیدی؛ به خاطر همه چیزش بابت آدم هایی که معلم من بوده اند و برای عشقی که میگیرم خدایا شکرت. </item>
        <item> خدایا.... \n  سپاس که امروز به من زندگی بخشیدی تا یک روز دیگر بندگی تو را به جا بیاورم و توفیق شکرگزاری اعتماد به نفس و شجاعتی که به من دادی. خدایا شکرت... </item>
        <item> خداوندا.... \n سپاس تو را که همه جا با من هستی شکرت که همیشه گرمای حضورت در قلبم حضور دارد. همیشه به تو ایمان دارم و تو تنها هدایت گر زندگی من هستی. خدایا شکرت </item>
        <item> خداوندا.... \n سپاس به خاطر لبخند همسرم و خنده های فرزندانم و به این خاطر که به زندگی پدر و مادرم برکت بخشیده ای خدایا شکرت </item>
        <item> ای بخشنده نعمتها و ای مهربان ترین مهربانان تو را شکرگزارم که بهشتی زیبا نزدیک و بزرگ داری و شکرگزارم که دوزخی کوچک و بعید ساخته ای خدایا شکرت </item>
        <item> آفریدگارا.... \n برای سلامتی تن توانمندي جان جوانمردي دل, دل انگیزی حال از تو سپاسگزارم </item>
        <item> پرودگارا.... \n آخر همه ی نا امیدی ها، نداشتن ها نخواستن ها نبودنها و به بن بست رسیدن ها خدایی را دارم که آغوشش را برایم باز کرده پس چرا نا امید باشم؟ خدایا شکرت .... </item>
        <item> خدایا.... \n دستمان را بگیر تا یادمان نرود که باید دستی را بگیریم و نگاه زیبایت را از ما دریغ نکن تا یادمان باشد باید نگاهی باشیم از سر عشق و مهر به انسان ها خدایا شکرت... </item>
        <item>پروردگارا.... \n  در دریای پر از تلاطم غوطه ورم. آسمانم ابریست صدایت که میکنم رام میشود این دریا باز میشود دل آسمانم و دنیا به من می خندد. خدایا شکرت </item>
        <item> خدايا .... \n برای همه ی داشته ها و نداشته هایم که از حکمتت سرچشمه گرفته اند شکرگزارم </item>
        <item> پرودگارا.... \n سپاس تو را آن هنگام که ابرهای تیره ذهنم را پاک کردی و تنها آفتاب و شادی دل را پس از آن به جای گذاشتی خدایا شکرت... </item>
        <item> پروردگارا .... \n سپاس از تو بابت پاهایی که ایستادن یادشان دادی، قلبی که در آن امید انداختی و دست هایی که به آن توانایی خلق کردن دادی؛ خدایا شکرت </item>
        <item> سپاس تو را ای پروردگارا \n برای همه ی چیزهای کوچکی که به ناگه رخ میدهند تا روزهای ملال انگیز را دور کنند روزهایی که بسیار شوم جلوه میکنند خدایا شکرت </item>
        <item> پرودگارا.... \n شکر میگویم تو را به خاطر اندیشه زیبایی که نثارم کردی در آن روزی که بسیار ناامید بودم تا راه جاده افسردگی را ببندم خدایا شکرت... </item>
        <item> خداوندا.... \n امروز شاد و سرحالم و حس زیبایی دارم آغوشم را برای خیر و برکت و خوشی و عشق میگشایم و هر دم و بازدم زندگیم سرشار از نظم الهی است. خدایا شکرت </item>
        <item>پروردگارا.... \n شکرگزارم که همواره در پی دلیلی هستی که ما را به بهانه یک دعا ببخشی و خوشبختی را نصیبمان سازی .خدایا شکرت. </item>
        <item> خدایا.... \n تو را شکر که مرا غنی و پربار میکنی و به من احساس زنده بودن میدهی و در هر لحظه از زندگی به من یادآور میشوی تا لبخند بزنم خدایا شکرت. </item>
        <item> یگانه آفریدگار من.... \n تو را سپاس که مرا از تمام وابستگیها می رهانی و ترس ها را از من دور کردی و روحم را پروراندی که برای خلق دنیایی جدید تلاش کنم خدایا شکرت. </item>
        <item> ای خدای خوبم \n  از تو می خواهم از اسارت ها و افکار بد خلاصم کنی همانطور که مرا بر مشکلات و موانع پیروز گرداندی و از دام های شیطان حفظ کردی \n خدایا شکرت. </item>
        <item> ای خدای بزرگ \n  تو سراسر خیر و خوبی هستی و هر کس تو را دارد چنان غرق در آرامش، شادی و نعمت است که تا پایان عمر خوشبخت زندگی خواهد کرد. \n خدایا شکرت. </item>
        <item> خدای من تو سراسر عشق و مهربانی هستی و وجود مرا چنان غرق در آرامشی لذت بخش میکنی که حتی نفسی از عمرم هدر نمیرود. \n خدایا شکرت. </item>
        <item> پروردگارا… \n   آرامش نابت و عطر مهربانیت را بر لوح دلم سرازیر کن تا هیچگاه در کشاکش زندگی خودم را نبازم و صبور باشم و به تو اعتماد کنم \n خدایا شکرت. </item>
        <item> خدای مهربانم....  \n  حتی اگر تمام درها به رویم بسته باشد اگر به قدرت بیکرانت ایمان بیاورم تو با اراده ات کم کم درهایی به رویم میگشایی که در تصور فکر کوچک من نمی گنجد. \n خدایا شکرت… </item>
        <item> خداوندا.... \n  دلخوشم به تو و سفره ای که پهن کرده ای و بدون منت به همه می بخشی و به بخشنده بودنت و اینکه مرا می بخشی و در آغوش میگیری! \n خدایا شکرت. </item>
        <item> خدایا… \n  شکر و سپاس آنگونه که شایسته خدایی توست که تو آنگونه که شایسته خدایی ات بوده به من بخشیده ای نه آنگونه که من ناچیز لیاقت داشته ام. \n خدایا شکرت. </item>
        <item> سپاس تو را ای پروردگارا برای همه ی چیزهای کوچکی که به ناگه رخ میدهند تا روزهای ملال انگیز را دور کنند روزهایی که بسیار شوم جلوه میکنند \n خدایا شکرت. </item>
        <item> خدایا برای همه ی داشته ها و نداشته هایم که از حکمتت از حکمتت سرچشمه گرفته اند \n شکرگزارم. </item>
        <item>آفریدگارا \n برای سلامتی تن توانمندي جان جوانمردي دل, دل انگیزی حال از تو سپاسگزارم. </item>
        <item> خداوندا \n بابت تمام نعمتهایی که به من بخشیدی و تمام گره هایی که هر بار با دستان سخاوتمند تو باز شد از تو سپاسگذارم \n خدایا شکرت. </item>
        <item> خدایا....  \n  دلم را با نور مهر و زلال خود پیوند بده چشمانم را به بصیرت نورخودت باز کن تا اندوه و تاریکی، راهی به من نداشته باشد، میدانی که جز تو کسی را ندارم. \n خدایا شکرت. </item>
        <item> خداوندا \n  شکرت برای هر آن چه که به ما بخشیدی؛ تپش قلب، دم و بازدم، دیدن و شنیدن و نعمات بی شماری که از شمردن آنها ناتوانم \n خدایا شکرت. </item>
        <item> پروردگارا.... \n شکر میکنم تو را بخاطر اینکه مسیر را برایم روشن میکنی و خانواده ام و دوستان خوبم در کنارم هستند. خدایا شکرت. </item>
        <item> معبود بی همتای من \n آرامشی که دارم را مدیون سلامت جسم و روحم هستم. سلامت جسم و روحم را هم مدیون خدایی هستم که مرا آفرید خدایا شکرت. </item>
    </string-array>
    <string name="about_app">این برنامه هر روز ساعت 8 صبح برای شما یک پیغام انرژی زا برای شروع روز شما نمایش میدهد و هر شب ساعت 10 یک پیام شکر گزاری بنمایش میگزارد \n گزینه های فعال سازی و غیر فعال سازی هم برای نمایش و پنهان کردن پیغام است </string>
    <string name="about">نحوه کارکرد برنامه</string>
    <string name="company_name">Tekma</string>
    <string name="tekma">Tekma App</string>
    <string name="setting">تنظیمات</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="header_title"> Header title</string>
    <string name="header_text">Header text</string>
</resources>