<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_shape"
            android:layout_margin="8dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginBottom="10dp"
                android:elevation="0dp"
                app:navigationIcon="@drawable/baseline_menu_24"
                app:title="@string/app_name">

                <Button
                    android:id="@+id/btn_about_app"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:contentDescription="@string/about"
                    app:icon="@drawable/baseline_info_24" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Note: A RecyclerView can also be used -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- Scrollable content -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_energy"
                    style="?attr/materialCardViewElevatedStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="9dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- Media -->
                        <ImageView
                            android:id="@+id/img_energy"
                            android:layout_width="match_parent"
                            android:layout_height="194dp"
                            android:contentDescription="@string/energy"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/img_rise" />


                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/b_ziba"
                            android:text="@string/energy"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_energy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/description_switch"
                            app:trackTint="?attr/colorOutline" />


                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_thanksgiving"
                    style="?attr/materialCardViewElevatedStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="9dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- Media -->
                        <ImageView
                            android:id="@+id/img_thanksgiving"
                            android:layout_width="match_parent"
                            android:layout_height="194dp"
                            android:contentDescription="@string/energy"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/img_moon" />


                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/b_ziba"
                            android:text="@string/thanksgiving"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_thanksgiving"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:contentDescription="@string/description_switch"
                            app:trackTint="?attr/colorOutline" />


                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        style="?attr/materialCardViewElevatedStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fontFamily="@font/b_ziba"
        app:dividerInsetEnd="28dp"
        app:dividerInsetStart="28dp"
        app:headerLayout="@layout/header_navigation_drawer"
        app:itemHorizontalPadding="28dp"
        app:menu="@menu/main_item_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
